# Generated by Django 5.1.1 on 2024-09-15 15:46

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='ProductoControlFertilizante',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('registro_ica', models.CharField(max_length=50)),
                ('nombre_producto', models.CharField(max_length=100)),
                ('frecuencia_aplicacion', models.IntegerField()),
                ('valor', models.DecimalField(decimal_places=2, max_digits=10)),
                ('fecha_ultima_aplicacion', models.DateField()),
            ],
            options={
                'abstract': False,
            },
        ),
        migrations.CreateModel(
            name='ProductoControlHongo',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('registro_ica', models.CharField(max_length=50)),
                ('nombre_producto', models.CharField(max_length=100)),
                ('frecuencia_aplicacion', models.IntegerField()),
                ('valor', models.DecimalField(decimal_places=2, max_digits=10)),
                ('periodo_carencia', models.IntegerField()),
                ('nombre_hongo', models.CharField(max_length=100)),
            ],
            options={
                'abstract': False,
            },
        ),
        migrations.CreateModel(
            name='ProductoControlPlaga',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('registro_ica', models.CharField(max_length=50)),
                ('nombre_producto', models.CharField(max_length=100)),
                ('frecuencia_aplicacion', models.IntegerField()),
                ('valor', models.DecimalField(decimal_places=2, max_digits=10)),
                ('periodo_carencia', models.IntegerField()),
            ],
            options={
                'abstract': False,
            },
        ),
        migrations.CreateModel(
            name='Productor',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('documento_identidad', models.CharField(max_length=20, unique=True)),
                ('nombre', models.CharField(max_length=100)),
                ('apellido', models.CharField(max_length=100)),
                ('telefono', models.CharField(max_length=15)),
                ('correo', models.EmailField(max_length=254)),
            ],
        ),
        migrations.CreateModel(
            name='Finca',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('numero_catastro', models.CharField(max_length=50, unique=True)),
                ('municipio', models.CharField(max_length=100)),
                ('productor', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='fincas', to='gestionvivero.productor')),
            ],
        ),
        migrations.CreateModel(
            name='Vivero',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('codigo', models.CharField(max_length=50)),
                ('tipo_cultivo', models.CharField(max_length=100)),
                ('finca', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='viveros', to='gestionvivero.finca')),
            ],
        ),
        migrations.CreateModel(
            name='Labor',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fecha', models.DateField()),
                ('descripcion', models.TextField()),
                ('productos_control_fertilizante', models.ManyToManyField(to='gestionvivero.productocontrolfertilizante')),
                ('productos_control_hongo', models.ManyToManyField(to='gestionvivero.productocontrolhongo')),
                ('productos_control_plaga', models.ManyToManyField(to='gestionvivero.productocontrolplaga')),
                ('vivero', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='labores', to='gestionvivero.vivero')),
            ],
        ),
    ]
